# yet-another-agent-manager

./: AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.claude/skills/create-profile/: SKILL.md
.claude/skills/feature-spec/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/specs/: 01-init.md  02-rename-to-yaam.md  03-init-before-tmux.md  04-tmux-script-session-arg.md  05-session-name-as-branch.md  06-update-command.md  07-remove-update-command.md  08-worktrunk-hidden-worktree-dirs.md  09-session-index.md  10-attach-existing-branch.md  11-consolidate-worktree-sanitisation.md  12-architecture-cleanup.md  13-terminal-title-on-attach.md  14-sanitized-session-key.md  15-atomic-session-create.md  16-kill-tears-down-tmux-session.md  17-attach-targets-pane.md
src/agent/: __init__.py  cli.py  config.py  init.py  profile.py  session.py  tmux.py  worktrunk.py
src/agent/orchestrator/: __init__.py  graph.py  models.py  worker.py
src/agent/profiles/: example.toml
src/yaam/: __init__.py  cli.py  config.py  init.py  profile.py  session.py  tmux.py  utils.py  worktrunk.py
src/yaam/orchestrator/: graph.py  worker.py
src/yaam/profiles/: example.toml
tests/: test_cli.py  test_init.py  test_orchestrator.py  test_profile.py  test_session.py  test_tmux.py  test_utils.py  test_worktrunk.py
