[project]
name = "agent-cli"
version = "0.1.0"
description = "A CLI tool that manages tmux sessions and git worktrees for multi-agent orchestration"
readme = "README.md"
authors = [
    { name = "Graham Daw", email = "grahamdaw@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "pydantic>=2.0",
    "libtmux>=0.40",
]

[project.scripts]
agent = "agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["agent"]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
