[project]
name = "yaam"
version = "0.1.0"
description = "A CLI tool that manages tmux sessions and git worktrees for multi-agent orchestration"
readme = "README.md"
authors = [
    { name = "Graham Daw", email = "grahamdaw@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "pydantic>=2.0",
    "libtmux>=0.40",
    "filelock>=3.25.2",
    "langgraph>=1.1.3",
    "langchain-anthropic>=1.4.0",
]

[project.scripts]
yaam = "yaam.cli:app"
yaam-worker = "yaam.orchestrator.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yaam"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["yaam"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
